// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicationsListPaging renders  component renders as empty due to currentpage set outside range 1`] = `
<div>
  <span
    class="publicationsListControls empty"
  />
</div>
`;

exports[`PublicationsListPaging renders  component should update page buttons 1`] = `
<div>
  <div
    data-testid="test"
    id="test"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container css-sqlfad-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-14euy9a-MuiGridLegacy-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary paging-previous css-1wivnju-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wdc28j-MuiSvgIcon-root"
            data-testid="ChevronLeftIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
            />
          </svg>
          Previous
        </button>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-sm-auto css-6v8vv2-MuiGridLegacy-root"
        data-analyticsid="test-desktop-controls"
        data-testid="test-desktop-controls"
        id="test-desktop-controls"
      >
        <button
          aria-label="Click to select page 1 of 3 result pages"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorInherit paging-button css-12v2ujq-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="test-select-page-1"
          data-testid="test-select-page-1"
          id="test-select-page-1"
          tabindex="0"
          type="button"
        >
          1
        </button>
        <button
          aria-label="Click to select page 2 of 3 result pages"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary paging-button css-1ymg34c-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="test-select-page-2"
          data-testid="test-select-page-2"
          id="test-select-page-2"
          tabindex="0"
          type="button"
        >
          2
        </button>
        <button
          aria-label="Click to select page 3 of 3 result pages"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorInherit paging-button css-12v2ujq-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="test-select-page-3"
          data-testid="test-select-page-3"
          id="test-select-page-3"
          tabindex="0"
          type="button"
        >
          3
        </button>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1idtt4c-MuiGridLegacy-root"
        data-analyticsid="test-mobile-controls"
        data-testid="test-mobile-controls"
        id="test-mobile-controls"
      >
        <div
          class="MuiBox-root css-1ml4cqn"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-1wivnju-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Page 2 of 3
          </button>
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-14euy9a-MuiGridLegacy-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary paging-next css-1wivnju-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          Next
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wdc28j-MuiSvgIcon-root"
            data-testid="ChevronRightIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PublicationsListPaging renders  component with ellipsis paging results 1`] = `
<div>
  <div
    data-testid="test"
    id="test"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container css-sqlfad-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-14euy9a-MuiGridLegacy-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary paging-previous css-1wivnju-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wdc28j-MuiSvgIcon-root"
            data-testid="ChevronLeftIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
            />
          </svg>
          Previous
        </button>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-sm-auto css-6v8vv2-MuiGridLegacy-root"
        data-analyticsid="test-desktop-controls"
        data-testid="test-desktop-controls"
        id="test-desktop-controls"
      >
        <button
          aria-label="Click to select page 1 of 50 result pages"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorInherit paging-button css-12v2ujq-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="test-select-page-1"
          data-testid="test-select-page-1"
          id="test-select-page-1"
          tabindex="0"
          type="button"
        >
          1
        </button>
        ...
        <button
          aria-label="Click to select page 8 of 50 result pages"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorInherit paging-button css-12v2ujq-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="test-select-page-8"
          data-testid="test-select-page-8"
          id="test-select-page-8"
          tabindex="0"
          type="button"
        >
          8
        </button>
        <button
          aria-label="Click to select page 9 of 50 result pages"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorInherit paging-button css-12v2ujq-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="test-select-page-9"
          data-testid="test-select-page-9"
          id="test-select-page-9"
          tabindex="0"
          type="button"
        >
          9
        </button>
        <button
          aria-label="Click to select page 10 of 50 result pages"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary paging-button css-1ymg34c-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="test-select-page-10"
          data-testid="test-select-page-10"
          id="test-select-page-10"
          tabindex="0"
          type="button"
        >
          10
        </button>
        <button
          aria-label="Click to select page 11 of 50 result pages"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorInherit paging-button css-12v2ujq-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="test-select-page-11"
          data-testid="test-select-page-11"
          id="test-select-page-11"
          tabindex="0"
          type="button"
        >
          11
        </button>
        <button
          aria-label="Click to select page 12 of 50 result pages"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorInherit paging-button css-12v2ujq-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="test-select-page-12"
          data-testid="test-select-page-12"
          id="test-select-page-12"
          tabindex="0"
          type="button"
        >
          12
        </button>
        ...
        <button
          aria-label="Click to select page 50 of 50 result pages"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorInherit paging-button css-12v2ujq-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="test-select-page-50"
          data-testid="test-select-page-50"
          id="test-select-page-50"
          tabindex="0"
          type="button"
        >
          50
        </button>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1idtt4c-MuiGridLegacy-root"
        data-analyticsid="test-mobile-controls"
        data-testid="test-mobile-controls"
        id="test-mobile-controls"
      >
        <div
          class="MuiBox-root css-1ml4cqn"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-1wivnju-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Page 10 of 50
          </button>
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-14euy9a-MuiGridLegacy-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary paging-next css-1wivnju-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          Next
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wdc28j-MuiSvgIcon-root"
            data-testid="ChevronRightIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PublicationsListPaging renders  component with empty paging data 1`] = `
<div>
  <span
    class="publicationsListControls empty"
  />
</div>
`;

exports[`PublicationsListPaging renders  component with non-empty paging data, first page 1`] = `
<div>
  <div
    data-testid="test"
    id="test"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container css-sqlfad-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-14euy9a-MuiGridLegacy-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary paging-previous css-1wivnju-MuiButtonBase-root-MuiButton-root"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wdc28j-MuiSvgIcon-root"
            data-testid="ChevronLeftIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
            />
          </svg>
          Previous
        </button>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-sm-auto css-6v8vv2-MuiGridLegacy-root"
        data-analyticsid="test-desktop-controls"
        data-testid="test-desktop-controls"
        id="test-desktop-controls"
      >
        <button
          aria-label="Click to select page 1 of 3 result pages"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary paging-button css-1ymg34c-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="test-select-page-1"
          data-testid="test-select-page-1"
          id="test-select-page-1"
          tabindex="0"
          type="button"
        >
          1
        </button>
        <button
          aria-label="Click to select page 2 of 3 result pages"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorInherit paging-button css-12v2ujq-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="test-select-page-2"
          data-testid="test-select-page-2"
          id="test-select-page-2"
          tabindex="0"
          type="button"
        >
          2
        </button>
        <button
          aria-label="Click to select page 3 of 3 result pages"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorInherit paging-button css-12v2ujq-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="test-select-page-3"
          data-testid="test-select-page-3"
          id="test-select-page-3"
          tabindex="0"
          type="button"
        >
          3
        </button>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1idtt4c-MuiGridLegacy-root"
        data-analyticsid="test-mobile-controls"
        data-testid="test-mobile-controls"
        id="test-mobile-controls"
      >
        <div
          class="MuiBox-root css-1ml4cqn"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-1wivnju-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Page 1 of 3
          </button>
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-14euy9a-MuiGridLegacy-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary paging-next css-1wivnju-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          Next
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wdc28j-MuiSvgIcon-root"
            data-testid="ChevronRightIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PublicationsListPaging renders  component with non-empty paging data, last page 1`] = `
<div>
  <div
    data-testid="test"
    id="test"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container css-sqlfad-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-14euy9a-MuiGridLegacy-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary paging-previous css-1wivnju-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wdc28j-MuiSvgIcon-root"
            data-testid="ChevronLeftIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
            />
          </svg>
          Previous
        </button>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-sm-auto css-6v8vv2-MuiGridLegacy-root"
        data-analyticsid="test-desktop-controls"
        data-testid="test-desktop-controls"
        id="test-desktop-controls"
      >
        <button
          aria-label="Click to select page 1 of 3 result pages"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorInherit paging-button css-12v2ujq-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="test-select-page-1"
          data-testid="test-select-page-1"
          id="test-select-page-1"
          tabindex="0"
          type="button"
        >
          1
        </button>
        <button
          aria-label="Click to select page 2 of 3 result pages"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorInherit paging-button css-12v2ujq-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="test-select-page-2"
          data-testid="test-select-page-2"
          id="test-select-page-2"
          tabindex="0"
          type="button"
        >
          2
        </button>
        <button
          aria-label="Click to select page 3 of 3 result pages"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary paging-button css-1ymg34c-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="test-select-page-3"
          data-testid="test-select-page-3"
          id="test-select-page-3"
          tabindex="0"
          type="button"
        >
          3
        </button>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1idtt4c-MuiGridLegacy-root"
        data-analyticsid="test-mobile-controls"
        data-testid="test-mobile-controls"
        id="test-mobile-controls"
      >
        <div
          class="MuiBox-root css-1ml4cqn"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-1wivnju-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Page 3 of 3
          </button>
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-14euy9a-MuiGridLegacy-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary paging-next css-1wivnju-MuiButtonBase-root-MuiButton-root"
          disabled=""
          tabindex="-1"
          type="button"
        >
          Next
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wdc28j-MuiSvgIcon-root"
            data-testid="ChevronRightIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PublicationsListPaging renders  component with non-empty paging data, second page 1`] = `
<div>
  <div
    data-testid="test"
    id="test"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container css-sqlfad-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-14euy9a-MuiGridLegacy-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary paging-previous css-1wivnju-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wdc28j-MuiSvgIcon-root"
            data-testid="ChevronLeftIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
            />
          </svg>
          Previous
        </button>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-sm-auto css-6v8vv2-MuiGridLegacy-root"
        data-analyticsid="test-desktop-controls"
        data-testid="test-desktop-controls"
        id="test-desktop-controls"
      >
        <button
          aria-label="Click to select page 1 of 3 result pages"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorInherit paging-button css-12v2ujq-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="test-select-page-1"
          data-testid="test-select-page-1"
          id="test-select-page-1"
          tabindex="0"
          type="button"
        >
          1
        </button>
        <button
          aria-label="Click to select page 2 of 3 result pages"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary paging-button css-1ymg34c-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="test-select-page-2"
          data-testid="test-select-page-2"
          id="test-select-page-2"
          tabindex="0"
          type="button"
        >
          2
        </button>
        <button
          aria-label="Click to select page 3 of 3 result pages"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorInherit paging-button css-12v2ujq-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="test-select-page-3"
          data-testid="test-select-page-3"
          id="test-select-page-3"
          tabindex="0"
          type="button"
        >
          3
        </button>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1idtt4c-MuiGridLegacy-root"
        data-analyticsid="test-mobile-controls"
        data-testid="test-mobile-controls"
        id="test-mobile-controls"
      >
        <div
          class="MuiBox-root css-1ml4cqn"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-1wivnju-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Page 2 of 3
          </button>
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-14euy9a-MuiGridLegacy-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary paging-next css-1wivnju-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          Next
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wdc28j-MuiSvgIcon-root"
            data-testid="ChevronRightIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PublicationsListPaging renders  should render buttons with zero total pages 1`] = `
<div>
  <div
    data-testid="test"
    id="test"
  />
</div>
`;
